--- a/index.html
+++ b/index.html
@@ -12,27 +12,21 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
-<body>
-  <div class="container">
-  <div class="row logo">
-    <h1>Recycle Game</h1>
-  </div>
+    <body>
+      <div class="container">
+        <div class="row logo">
+          <h1>Recycle Game</h1>
+        </div>
 
+        <canvas id="canvas"></canvas>
+      </div>
 
-<!-- beginning canvas -->
-  <canvas id="canvas">
-
-
-  </canvas>
-<!-- End canvas -->
-  </div>
-
-  <script src="script.js"></script>
-  <script src="falling-rubbish.js"></script>
-  <script src="bin.js"></script>
-  <script src="counter.js"></script>
-</body>
+      <script src="js/script.js"></script>
+      <script src="js/falling-rubbish.js"></script>
+      <script src="js/bin.js"></script>
+      <script src="js/counter.js"></script>
+    </body>
 </html>
