--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
 
-    <body>
-      <div class="container">
-        <div class="row logo">
-          <h1>Recycle Game</h1>
-        </div>
-
-        <canvas id="canvas"></canvas>
+  <body>
+    <div class="container">
+      <div class="row logo">
+        <h1>Recycle Game</h1>
       </div>
 
-      <script src="js/script.js"></script>
-      <script src="js/falling-rubbish.js"></script>
-      <script src="js/bin.js"></script>
-      <script src="js/counter.js"></script>
-    </body>
+      <canvas id="canvas"></canvas>
+    </div>
+
+    <!-- <script src="js/script.js"></script> -->
+    <script src="js/rubbish.js"></script>
+    <script src="js/bin.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
