--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     </div>
 
     <!-- <script src="js/script.js"></script> -->
-    <script src="js/main.js"></script>
-    <script src="js/game.js"></script>
     <script src="js/rubbish.js"></script>
     <script src="js/bin.js"></script>
+    <script src="js/controller.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
