--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
 
     <!-- <script src="js/script.js"></script> -->
+    <script src="js/backgd.js"></script>
     <script src="js/rubbish.js"></script>
     <script src="js/bin.js"></script>
     <script src="js/controller.js"></script>
