--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
@@ -17,11 +17,12 @@
 
   <body>
     <div class="container">
-      <div class="row logo">
-        <h1>Recycle Game</h1>
+      <div class="menu">
+        <h1>Recyclable</h1>
+        <h2>Click anywhere to start</h2>
       </div>
-
       <canvas id="canvas"></canvas>
+
     </div>
 
     <!-- <script src="js/script.js"></script> -->
