menu page testing

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <div class="container">
-      <div class="menu">
+      <div id="menu">
         <h1>Recyclable</h1>
         <h2>Click anywhere to start</h2>
       </div>
@@ -32,5 +32,7 @@
     <script src="js/controller.js"></script>
     <script src="js/game.js"></script>
     <script src="js/main.js"></script>
+
+    <h1>Instruction</h1>
   </body>
 </html>
