added summary page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <h2>Click anywhere to start</h2>
       </div>
       <canvas id="canvas"></canvas>
-
+      <div id="gameover">
+        <h1>Game Over</h1>
+        <h2>Click to restart</h2>
     </div>
 
     <!-- <script src="js/script.js"></script> -->
@@ -32,7 +34,5 @@
     <script src="js/controller.js"></script>
     <script src="js/game.js"></script>
     <script src="js/main.js"></script>
-
-    <h1>Instruction</h1>
   </body>
 </html>
