--- a/index.html
+++ b/index.html
@@ -19,12 +19,24 @@
     <div class="container">
       <div id="menu">
         <h1>Recyclable</h1>
+        <p>Collect these:</p>
+        <div class="row col-md-10">
+          <img class="collect" src = "assets/obj-bottles-clear.png">
+          <img class="collect" src = "assets/obj-crushedcan-brown.png">
+          <img class="collect" src = "assets/obj-duffcan.png">
+          <img class="collect" src = "assets/obj-newspaper-stack.png">
+          <img class="collect" src = "assets/obj-crushedbottle-gray.png">
+        </div>
+        <p>Avoid these:</p>
+        <div class="row col-md-10">
+          <img class="avoid" src = "assets/obj-eatencandybar-red.png">
+          <img class="avoid" src = "assets/obj-sandwich.png">
+          <img class="avoid" src = "assets/obj-applecore-dull.png">
+          <img class="avoid" src = "assets/obj-donut-homer.png">
+        </div>
         <h2>Click anywhere to start</h2>
       </div>
       <canvas id="canvas"></canvas>
-      <div id="gameover">
-        <h1>Game Over</h1>
-        <h2>Click to restart</h2>
     </div>
 
     <!-- <script src="js/script.js"></script> -->
