fixed restart function

--- a/index.html
+++ b/index.html
@@ -20,21 +20,26 @@
       <div id="menu">
         <h1>Recyclable</h1>
         <p>Collect these:</p>
-        <div class="row col-md-10">
-          <img class="collect" src = "assets/obj-bottles-clear.png">
-          <img class="collect" src = "assets/obj-crushedcan-brown.png">
-          <img class="collect" src = "assets/obj-duffcan.png">
-          <img class="collect" src = "assets/obj-newspaper-stack.png">
-          <img class="collect" src = "assets/obj-crushedbottle-gray.png">
-        </div>
+        <div class="row">
+          <div class="col-md-5 pull-left">
+            <img class="collect" src = "assets/obj-bottles-clear.png">
+            <img class="collect" src = "assets/obj-crushedcan-brown.png">
+            <img class="collect" src = "assets/obj-duffcan.png">
+            <img class="collect" src = "assets/obj-newspaper-stack.png">
+            <img class="collect" src = "assets/obj-crushedbottle-gray.png">
+          </div>
         <p>Avoid these:</p>
-        <div class="row col-md-10">
-          <img class="avoid" src = "assets/obj-eatencandybar-red.png">
-          <img class="avoid" src = "assets/obj-sandwich.png">
-          <img class="avoid" src = "assets/obj-applecore-dull.png">
-          <img class="avoid" src = "assets/obj-donut-homer.png">
+          <div class="col-md-5 pull-right">
+            <img class="avoid" src = "assets/obj-eatencandybar-red.png">
+            <img class="avoid" src = "assets/obj-sandwich.png">
+            <img class="avoid" src = "assets/obj-applecore-dull.png">
+            <img class="avoid" src = "assets/obj-donut-homer.png">
+          </div>
         </div>
-        <h2>Click anywhere to start</h2>
+        <div class="row col-md-10">
+          <p> Use <img class="key" src="assets/leftkey.png"> and <img class="key" src="assets/rightkey.png"> to move.</p>
+        </div>
+        <h2>Click here to start</h2>
       </div>
       <canvas id="canvas"></canvas>
     </div>
